revert oss back to previous

--- a/app/scripts/modules/amazon/src/securityGroup/configure/createSecurityGroupIngress.html
+++ b/app/scripts/modules/amazon/src/securityGroup/configure/createSecurityGroupIngress.html
@@ -94,6 +94,6 @@
         </p>
       </div>
     </div>
-    <additional-ip-rules security-group-details="securityGroupDetails" on-change="ctrl.setIpObjects" />
+    <additional-ip-rules security-group-details="securityGroupDetails" />
   </div>
 </div>
