--- a/app/scripts/modules/amazon/src/securityGroup/configure/createSecurityGroupIngress.html
+++ b/app/scripts/modules/amazon/src/securityGroup/configure/createSecurityGroupIngress.html
@@ -95,11 +95,6 @@
         </p>
       </div>
     </div>
-    <security-group-details-custom
-      security-group-details="securityGroup"
-      ctrl="ctrl"
-      scope="self"
-      application="application"
-    />
+    <security-group-details-custom security-group-details="securityGroup" ctrl="ctrl" scope="self" />
   </div>
 </div>
